@@ -1,6 +1,6 @@
 Description: FHS adaptation for Debian packaging
- On Debian, NX libraries and binaries are installed to
- /usr/lib/nx.
+ From tarball, NX libraries and binaries are installed to
+ /usr/local/lib/nx.
 Forwarded: not-needed
 Author: Mike Gabriel <mike.gabriel@das-netzwerkteam.de>
 Last-Update: 2012-12-31
@@ -17,7 +17,7 @@ Last-Update: 2012-12-31
  #endif
  #else
 -#define UsrLibDir Concat3(/usr,/,LibDirName)
-+#define UsrLibDir Concat4(/usr,/,LibDirName,/nx)
++#define UsrLibDir Concat4(/usr/local,/,LibDirName,/nx)
  #ifndef AlternateUsrLibDir
  #define AlternateUsrLibDir NO
  #endif
