@@ -1,11 +1,11 @@
 Description: FHS path fix for SecurityPolicy file
- This patch is needed on Debian only, not reporting this path
- change to upstream.
+ This patch is needed for Tarball installation mode of NX (redistributed)
+ only, not reporting this path change to upstream.
  .
  Originally contributed by Marcelo Boveto Shima <marceloshima@gmail.com>.
 Forwarded: not-needed
 Author: Mike Gabriel <mike.gabriel@das-netzwerkteam.de>
-Last-Update: 2011-12-31
+Last-Update: 2012-01-12
 --- a/nx-X11/programs/Xserver/Xext/security.c
 +++ b/nx-X11/programs/Xserver/Xext/security.c
 @@ -86,7 +86,7 @@
@@ -13,7 +13,7 @@ Last-Update: 2011-12-31
  #ifdef NXAGENT_SERVER
  
 -#define NX_ALTERNATIVEPOLICYFILE "/usr/lib/xserver/SecurityPolicy"
-+#define NX_ALTERNATIVEPOLICYFILE "/usr/share/nx/SecurityPolicy"
++#define NX_ALTERNATIVEPOLICYFILE "/usr/local/share/nx/SecurityPolicy"
  
  #endif
  
