@@ -14,6 +14,7 @@
 014_nxcompshad_makefile-uninstall.patch
 015_nxproxy_makefile-uninstall.patch
 016_nx-x11_install-location.patch
+016a_debian_nx-X11_install-location.patch
 017_nx-x11_update-autotools-helper-files.patch
 018_nx-x11_update-libtool-ltmain-script.patch
 019_nx-x11_expat-build-against-system-libxmltok.patch
@@ -23,6 +24,7 @@
 023_add-x2goagent-wrapper.patch
 101_nxagent_set-rgb-path.patch
 102_xserver-xext_set-securitypolicy-path.patch
+102a_debian_xserver-xext_set-securitypolicy-path.patch
 103_nxagent_set-X0-config-path.patch
 105_nxagent_export-remote-keyboard-config.patch
 106_nxagent_utf8-copy-clipboard.patch
