@@ -14,6 +14,10 @@ nx-libs (2:3.5.0.2-1) UNRELEASED; urgency=low
     patch: 209_x2goagent-add-man-page.patch
   * Modify patch: 101_nxagent_set-rgb-path.patch, add path to RGB file
     if NX (redistributed) is installed via tarball under /usr/local.
+  * Provide patches that are tarball / distro aware. Either NX (redistributed)
+    has been installed to /usr/local/lib/nx via tarball or it has been packaged
+    for a distribution and is installed to /usr/lib/nx. Other installation paths
+    are currently not supported.
 
  -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 11 Jan 2012 15:30:36 +0100
 
